Tue Dec 16 22:42:16 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit.setup_argv): sorry, fixed wrong commit.

Tue Dec 16 21:59:29 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit.setup_argv): ALT_SEPARATOR support.

Tue Dec 16 20:24:20 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (_parse): m17n compliant.

Tue Dec 16 19:43:53 2008  Tanaka Akira  <akr@fsij.org>

	* re.c: use strlcpy for error messages.

Tue Dec 16 16:41:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt): returns dispatched result.

	* parse.y (primary): also in ripper, saves in_def before restoring.

Tue Dec 16 12:30:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_header_ucontext_h): do not use ucontext.h on Mac
	  OS X 10.5 or later.  merged from MacPorts.

	* configure.in (ac_cv_func_daemon): daemon(3) is deprecated on Mac OS
	  X 10.5 or later.

Tue Dec 16 11:37:07 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (set_arg0): use strlcpy() instead of strncpy().

	* load.c (rb_feature_p): ditto.

	* dln.c (dln_load): ditto.

Tue Dec 16 09:14:28 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (block_call): block should not be given to yield.
	  [ruby-core:20583]

Mon Dec 15 23:48:39 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* thread.c (sleep_timeval): cast tv_usec to long to shut up
	  warnings on OSX.  [ruby-dev:37449]

Mon Dec 15 23:29:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (process_options): revive global sub, gsub, chop, chomp
	  only when auto looping options (-p/-n) is specified.
	  [ruby-core:20570]

Mon Dec 15 21:01:46 2008  Tanaka Akira  <akr@fsij.org>

	* ext/pty/pty.c (chfunc): make it static.

Mon Dec 15 20:16:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (EXTMK_ARGS): shouldn't use ``\"'' because cmd.exe eat
	  ''\'' in such quotes.

Mon Dec 15 19:07:31 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
