@@ -1,3 +1,11 @@
+Tue Dec 16 21:59:02 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ext/bigdecimal/bigdecimal.c (VpToString): reverted modification
+	  (that caused a bug) in r20359.  [ruby-dev:37370]
+
+	* ext/bigdecimal/bigdecimal.c (BigDecimal_limit): comment update.
+	  [ruby-dev:37465]
+
 Tue Dec 16 22:42:16 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* lib/test/unit.rb (Test::Unit.setup_argv): sorry, fixed wrong commit.
